name:                Ormin
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              VM
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable Ormin
  main-is:             Main.hs
  other-modules:       Snake
  build-depends:       base >=4.12 && <4.13
                     , terminfo
                     , random
  hs-source-dirs:      src
  default-language:    Haskell2010
